--- a/Week 3 - From validation/index.html
+++ b/Week 3 - From validation/index.html
@@ -1,212 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Form</title>
-    <style>
-        body {
-            background-color: #282c34;
-            color: #ffffff;
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .form-container {
-            background-color: #333;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-        }
-        .form-title {
-            text-align: center;
-            font-size: 1.5em;
-            margin-bottom: 20px;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .form-group input {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            border-radius: 3px;
-        }
-        .form-group input[type="text"],
-        .form-group input[type="email"],
-        .form-group input[type="password"] {
-            background-color: #444;
-            color: #fff;
-        }
-        .form-group select {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            border-radius: 3px;
-            background-color: #444;
-            color: #fff;
-        }
-        .phone-group {
-            display: flex;
-            align-items: center;
-        }
-        .phone-group select {
-            width: auto;
-            margin-right: 10px;
-        }
-        .phone-group input {
-            flex-grow: 1;
-        }
-        .separator {
-            height: 30px;
-            width: 2px;
-            background-color: #fff;
-            margin: 0 10px;
-        }
-        .form-group button {
-            width: 100%;
-            padding: 10px;
-            background-color: #006400;
-            color: #fff;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-        .form-group button:hover {
-            background-color: #008000;
-        }
-        .error-message {
-            color: #ff0000;
-            font-size: 0.9em;
-            margin-top: 5px;
-        }
-        .success-message {
-            color: #00ff00;
-            font-size: 1em;
-            margin-top: 15px;
-            text-align: center;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Form Validation</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="form-container">
-        <div class="form-title">Registration Form</div>
-        <form id="registrationForm">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <div class="error-message" id="nameError"></div>
-            </div>
-            <div class="form-group">
-                <label for="phone">Phone Number:</label>
-                <div class="phone-group">
-                    <select id="countryCode" name="countryCode" required>
-                        <option value="+1">+1</option>
-                        <option value="+91">+91</option>
-                        <!-- Add more country codes as needed -->
-                    </select>
-                    <div class="separator"></div>
-                    <input type="text" id="phone" name="phone" required>
-                </div>
-                <div class="error-message" id="phoneError"></div>
-            </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <div class="error-message" id="emailError"></div>
-            </div>
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-                <div class="error-message" id="usernameError"></div>
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-                <input type="checkbox" onclick="togglePassword()"> Show Password
-                <div class="error-message" id="passwordError"></div>
-            </div>
-            <div class="form-group">
-                <button type="button" onclick="validateForm()">Register</button>
-            </div>
-            <div class="success-message" id="successMessage"></div>
-        </form>
-    </div>
-
-    <script>
-        function togglePassword() {
-            var passwordField = document.getElementById("password");
-            if (passwordField.type === "password") {
-                passwordField.type = "text";
-            } else {
-                passwordField.type = "password";
-            }
-        }
-
-        function validateForm() {
-            var name = document.getElementById("name").value;
-            var phone = document.getElementById("phone").value;
-            var email = document.getElementById("email").value;
-            var username = document.getElementById("username").value;
-            var password = document.getElementById("password").value;
-
-            var nameError = document.getElementById("nameError");
-            var phoneError = document.getElementById("phoneError");
-            var emailError = document.getElementById("emailError");
-            var usernameError = document.getElementById("usernameError");
-            var passwordError = document.getElementById("passwordError");
-            var successMessage = document.getElementById("successMessage");
-
-            var valid = true;
-
-            if (!name) {
-                nameError.textContent = "Name is required.";
-                valid = false;
-            } else {
-                nameError.textContent = "";
-            }
-
-            if (!phone) {
-                phoneError.textContent = "Phone number is required.";
-                valid = false;
-            } else {
-                phoneError.textContent = "";
-            }
-
-            if (!email.includes("@")) {
-                emailError.textContent = "Invalid email address.";
-                valid = false;
-            } else {
-                emailError.textContent = "";
-            }
-
-            if (username.length <= 5 || !/[^\w\s]/.test(username)) {
-                usernameError.textContent = "Username must be above 5 letters and contain at least one symbol.";
-                valid = false;
-            } else {
-                usernameError.textContent = "";
-            }
-
-            if (password.length > 8 || !/[^\w\s]/.test(password)) {
-                passwordError.textContent = "Password must be maximum of 8 characters and contain at least one symbol.";
-                valid = false;
-            } else {
-                passwordError.textContent = "";
-            }
-
-            if (valid) {
-                successMessage.textContent = "Registration successful!";
-            } else {
-                successMessage.textContent = "";
-            }
-        }
-    </script>
+  <div class="form-container">
+    <h2>Registration Form</h2>
+    <form id="registrationForm">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required>
+        <span class="error" id="nameError">Name is required</span>
+      </div>
+      <div class="form-group">
+        <label for="phone">Phone Number</label>
+        <select id="countryCode" name="countryCode" required>
+          <option value="+1">+1</option>
+          <option value="+91">+91</option>
+          <option value="+44">+44</option>
+          <option value="+86">+86</option>
+          <option value="+61">+61</option>
+          <!-- Add more country codes as needed -->
+        </select>
+        <input type="text" id="phone" name="phone" required>
+        <span class="error" id="phoneError">Enter a valid phone number</span>
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+        <span class="error" id="emailError">Invalid, enter a valid email</span>
+      </div>
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" required>
+        <span class="error" id="usernameError">Username must be at least 10 characters</span>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" required>
+        <button type="button" id="togglePassword">Show Password</button>
+        <span class="error" id="passwordError">Password must be 8-15 characters and contain at least one symbol</span>
+      </div>
+      <button type="submit">Register</button>
+      <p id="successMessage" class="success">Registration successful!</p>
+    </form>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
